# langchain-updated-2026

./: pyproject.toml
generative_ai/: 01_LangchainIntro.ipynb  01_LangchainIntro.md  02_tools.ipynb  03_agent_intro.ipynb  04_agent_multi_tools.ipynb  05_slack_tools_agent.ipynb  06_messages.ipynb  06_messages.py  07_structured_output.ipynb  08_Memory.ipynb  09_middleware.ipynb
