[project]
name = "langchain-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "python-dotenv>=1.2.1",
]
